--- a/ToDo_App-master/index.html
+++ b/ToDo_App-master/index.html
@@ -16,8 +16,8 @@
             <button type="button" id="remove">Remove</button>
         </div>
         <ul class="list">
-            <li id="mycheck"> <input type="checkbox" name="" id="check" checked><label for="">Apple</label></li>
-            <li id="mycheck"> <input type="checkbox" name="" id="check"><label for="">Ball</label></li>
+            <li id="mycheck"> <input type="checkbox" name="" id="check" checked><label for="">React</label></li>
+            <li id="mycheck"> <input type="checkbox" name="" id="check"><label for="">Angular</label></li>
         </ul>
     </div>
     <script src="todo.js"></script>
